added some styling and made all my divs get the right col and row classes finally

--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 
 <head>
     <title>Connect 4 Ponies</title>
-
+    <link href="styles/reset.css" type="text/css" rel="stylesheet">
     <link href="styles/style.css" type="text/css" rel=stylesheet>
+
 </head>
 
 <body>
     <h1>Welcome to Connect 4: MLP Edition!</h1>
 
+    <div id="board"></div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="src/cell.js"></script>
     <script src="src/cellCreator.js"></script>
