debugged as much as possible with help from Joe

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
 <body>
     <h1>Welcome to Connect 4: MLP Edition!</h1>
-
+    <div class="instructions">
+        <h2>Instructions: Drop a piece by clicking the top square in the column you want to drop into.</h2>
+        <h2>The object of the game is to get 4 faces of your pony together in a row, column, or diagonally.</h2>
+    </div>
     <div id="board"></div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="src/cell.js"></script>
